# OpenControl

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  QUICKSTART.md  README.md  SYSTEM_STATUS.md  pyproject.toml  requirements.txt  run_opencontrol.py  setup.py  test_complete_system.py  test_simple_system.py  test_system.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
configs/models/: development.yaml
docs/: README.md  deployment.md  hardware_setup.md  installation.md  quickstart.md  robotics_tutorial.md  training.md
opencontrol/: __init__.py
opencontrol/cli/: __init__.py  commands.py  main.py
opencontrol/control/: __init__.py  planners.py  safety.py  utils.py  visual_mpc.py
opencontrol/core/: __init__.py  attention_mechanisms.py  multimodal_encoder.py  temporal_dynamics.py  world_model.py
opencontrol/data/: __init__.py  dataset_manager.py
opencontrol/deployment/: __init__.py  docker_utils.py  model_server.py  monitoring.py  optimization.py
opencontrol/evaluation/: __init__.py  analysis.py  benchmarks.py  metrics_suite.py  visualization.py
opencontrol/training/: __init__.py  callbacks.py  distributed_trainer.py  losses.py  optimizers.py
opencontrol/utils/: __init__.py  config_utils.py  data_utils.py  logging_utils.py  math_utils.py
scripts/: profile_model.py
